# INFM_HIL_Interface

./: .gitignore  .gitmodules  BmwCodec_8h_source.html  CANConnectorCodecFactory_8h_source.html  CANConnectorCodec_8h_source.html  CANConnectorConfig_8h_source.html  CANConnectorReceiveOperation_8h_source.html  CANConnectorSendOperation_8h_source.html  CANConnector_8h_source.html  CMakeLists.txt  CodecUtilities_8h_source.html  ConfigSerializerCanConnector_8h_source.html  ConfigSerializer_8h_source.html  ConnectorConfig_8h_source.html  ConnectorInfo_8h_source.html  DefaultApiImpl_8h_source.html  DefaultApi_8h_source.html  DuTConnector_8h_source.html  DuTLoggerConfig_8h_source.html  DuTLogger_8h_source.html  Dummy__CANFD__Config_8h_source.html  Dummy__CANFD__Error_8h_source.html  Dummy__CANFD__Socket_8h_source.html  EthernetPacket_8h_source.html  EventVisitor_8h_source.html  InterfaceIndexIO_8h_source.html  InterfaceLoggerConfig_8h_source.html  InterfaceLogger_8h_source.html  InterfaceMessages_8h_source.html  MessageWithTimestamp_8h_source.html  Message_8h_source.html  PeriodicTimer_8h_source.html  README.md  RESTConnectorConfig_8h_source.html  RESTDummyConnector_8h_source.html  ReceiveEndpoint_8h_source.html  RegisteredInterface_8h_source.html  SharedQueue_8h_source.html  SimComHandler_8h_source.html  SimEvent_8h_source.html  (+311 more)
Dummy_DuT/: CMakeLists.txt
Dummy_DuT/REST_Dummy_DuT/: CMakeLists.txt  Dockerfile  REST_Dummy_DuT.yaml  ReadMe.md  config  main.cpp
Dummy_DuT/REST_Dummy_DuT/apiImpl/: DefaultApiImpl.cpp  DefaultApiImpl.h  RegisteredInterface.cpp  RegisteredInterface.h
Dummy_DuT/REST_Dummy_DuT/generatedAPI/: README.md
Dummy_DuT/REST_Dummy_DuT/generatedAPI/.openapi-generator/: FILES
Dummy_DuT/REST_Dummy_DuT/generatedAPI/api/: DefaultApi.cpp  DefaultApi.h
Dummy_DuT/REST_Dummy_DuT/generatedAPI/model/: Message.cpp  Message.h
Dummy_DuT/REST_Dummy_DuT/messages/: InterfaceMessages.cpp  InterfaceMessages.h  MessageWithTimestamp.cpp  MessageWithTimestamp.h  RegisteredInterface.cpp  RegisteredInterface.h
Sim_To_DuT_Interface/: CMakeLists.txt  SimToDuTInterface.cpp  SimToDuTInterface.h  Sim_To_DuT_Interface.cpp  Sim_To_DuT_Interface.h  SystemConfig.h  main.cpp
Sim_To_DuT_Interface/DuTLogger/: CMakeLists.txt  DuTLogger.cpp  DuTLogger.h  DuTLoggerConfig.h  EventVisitor.cpp  EventVisitor.h
Sim_To_DuT_Interface/DuT_Connectors/: CMakeLists.txt  ConnectorConfig.h  ConnectorInfo.cpp  ConnectorInfo.h  DuTConnector.cpp  DuTConnector.h  DuTInfo.cpp  DuTInfo.h  DuT_Connector.cpp  DuT_Connector.h  DuT_Info.cpp  DuT_Info.h  ReadMe.md
Sim_To_DuT_Interface/DuT_Connectors/CANConnector/: CANConnector.cpp  CANConnector.h  CANConnectorCodec.h  CANConnectorCodecFactory.cpp  CANConnectorCodecFactory.h  CANConnectorConfig.cpp  CANConnectorConfig.h  CANConnectorReceiveOperation.cpp  CANConnectorReceiveOperation.h  CANConnectorSendOperation.cpp  CANConnectorSendOperation.h  CMakeLists.txt  InterfaceIndexIO.cpp  InterfaceIndexIO.h  ReadMe.md
Sim_To_DuT_Interface/DuT_Connectors/CANConnector/CANConnectorCodecs/: BmwCodec.cpp  BmwCodec.h  CMakeLists.txt  CodecUtilities.cpp  CodecUtilities.h  SuzukiCodec.cpp  SuzukiCodec.h
Sim_To_DuT_Interface/DuT_Connectors/CAN_Connector/: CAN_Connector.cpp  CAN_Connector.h
Sim_To_DuT_Interface/DuT_Connectors/PCAN_USB_FD_Connector/: PCAN_USB_FD_Connector.cpp  PCAN_USB_FD_Connector.h
Sim_To_DuT_Interface/DuT_Connectors/RESTDummyConnector/: CMakeLists.txt  RESTConfig.h  RESTConnectorConfig.h  RESTDummyConnector.cpp  RESTDummyConnector.h  ReadMe.md  ReceiveEndpoint.cpp  ReceiveEndpoint.h  RestDummyConnector.cpp  RestDummyConnector.h  restbed
Sim_To_DuT_Interface/DuT_Connectors/REST_Dummy_Connector/: Rest_Dummy_Connector.cpp  Rest_Dummy_Connector.h
Sim_To_DuT_Interface/DuT_Connectors/V2XConnector/: CMakeLists.txt  EthernetPacket.cpp  EthernetPacket.h  ReadMe.md  V2XConfig.h  V2XConnector.cpp  V2XConnector.h  V2XConnectorConfig.h  V2XVisitor.h
Sim_To_DuT_Interface/Events/: EventVisitor.cpp  EventVisitor.h  SimEvent.cpp  SimEvent.h
Sim_To_DuT_Interface/Interface_Logger/: CMakeLists.txt  DuTLoggerConfig.h  InterfaceLogger.cpp  InterfaceLogger.h  InterfaceLoggerConfig.h
Sim_To_DuT_Interface/Sim_Communication/: EventToSimVisitor.h  SimComHandler.cpp  SimComHandler.h  Sim_Com_Handler.cpp  Sim_Com_Handler.h
Sim_To_DuT_Interface/Utility/: ConfigSerializer.h  ConfigSerializerCanConnector.h  PeriodicTimer.cpp  PeriodicTimer.h  SharedQueue.h
doxygen/: CMakeLists.txt  Doxyfile.in
html/: CANConnector_8h_source.html  ConnectorConfig_8h_source.html  ConnectorInfo_8h_source.html  DefaultApiImpl_8h_source.html  DefaultApi_8h_source.html  DuTConnector_8h_source.html  Dummy__CANFD__Error_8h_source.html  Message_8h_source.html  RESTConfig_8h_source.html  RESTDummyConnector_8h_source.html  ReceiveEndpoint_8h_source.html  RegisteredInterface_8h_source.html  SharedQueue_8h_source.html  SimComHandler_8h_source.html  SimEvent_8h_source.html  SimToDuTInterface_8h_source.html  annotated.html  classdummy__dut_1_1rest_1_1api_1_1DefaultApiDashboardMessagesResource-members.html  classdummy__dut_1_1rest_1_1api_1_1DefaultApiDashboardResource-members.html  classdummy__dut_1_1rest_1_1api_1_1DefaultApiDashboardResource.html  classdummy__dut_1_1rest_1_1api_1_1DefaultApiDashboardResource__inherit__graph.dot  classdummy__dut_1_1rest_1_1api_1_1DefaultApiReadResource.html  classdummy__dut_1_1rest_1_1impl_1_1DefaultApiImpl-members.html  classdummy__dut_1_1rest_1_1impl_1_1DefaultApiImpl.html  classdummy__dut_1_1rest_1_1impl_1_1DefaultApiImpl__coll__graph.dot  classdummy__dut_1_1rest_1_1impl_1_1DefaultApiImpl__inherit__graph.dot  classdummy__dut_1_1rest_1_1impl_1_1RegisteredInterface.html  classdummy__dut_1_1rest_1_1messages_1_1MessageWithTimestamp-members.html  classes.html  classsim__interface_1_1SharedQueue-members.html  classsim__interface_1_1SharedQueue.html  classsim__interface_1_1SimComHandler-members.html  classsim__interface_1_1SimComHandler.html  classsim__interface_1_1SimEvent-members.html  classsim__interface_1_1SimEvent.html  classsim__interface_1_1SimToDuTInterface-members.html  (+48 more)
(+142 files in other folders)
